--- a/conf/ssl.conf
+++ b/conf/ssl.conf
@@ -9,7 +9,7 @@
 
   SSLPassPhraseDialog  exec:/usr/share/apache2/ask-for-passphrase
 
-  SSLSessionCache		shmcb:$${APACHE_RUN_DIR}/ssl_scache(512000)
+  SSLSessionCache		shmcb:${APACHE_RUN_DIR}/ssl_scache(512000)
   SSLSessionCacheTimeout  300
 
   SSLCipherSuite HIGH:!aNULL
