--- a/conf/default-ssl.conf
+++ b/conf/default-ssl.conf
@@ -5,8 +5,8 @@
 
     DocumentRoot /var/www/html
 
-    ErrorLog $${APACHE_LOG_DIR}/error.log
-    CustomLog $${APACHE_LOG_DIR}/access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     SSLEngine on
 
